# waybar-crypto

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  config.ini.example  crypto.ini  crypto.py  pyproject.toml  waybar_crypto.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  test.yml
crypto/: crypto.py
src/: waybar_crypto.py
tests/: test_waybar_crypto.py
waybar_crypto/: __init__.py  __main__.py  config.py  exceptions.py  models.py  waybar_crypto.py
