[project]
name = "waybar-crypto"
description = "A Waybar module for displaying cryptocurrency market information from CoinMarketCap."
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["requests"]
dynamic = ["version", "readme"]

[project.scripts]
waybar-crypto = "waybar_crypto:main"

[project.optional-dependencies]
dev = ["ruff", "bandit", "pre-commit>=3"]
tests = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["waybar_crypto"]

[tool.setuptools.dynamic]
version = { attr = "waybar_crypto.VERSION" }
readme = { file = ["README.md"] }

[tool.ruff]
line-length = 100

[tool.bandit]
exclude = ["test_*.py"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
