[project]
name = "waybar-crypto"
description = "A Waybar module for displaying cryptocurrency market information from CoinMarketCap."
readme = "README.md"
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests"]
dynamic = ["version"]

[project.scripts]
waybar-crypto = "waybar_crypto.__main__:main"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "versioningit>=3.3.0",
]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "waybar_crypto/__init__.py"
build-file = "waybar_crypto/__init__.py"
replacement = '"{next_version}"'

[tool.hatch.build.targets.wheel]
packages = ["waybar_crypto"]

[tool.ruff]
line-length = 100

[tool.bandit]
exclude = ["test_*.py"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "integration: tests that require a real API key and network access",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"
