[project]
name = "waybar-crypto"
description = "A Waybar module for displaying cryptocurrency market information from CoinMarketCap."
readme = "README.md"
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = "MIT"
requires-python = ">=3.11"
version = "1.6.1"

dependencies = ["requests>=2.28.0"]

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.2",
    "basedpyright>=1.37.1",
    "pre-commit>=4.5.1",
    "prek>=0.2.30",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[project.scripts]
waybar-crypto = "waybar_crypto.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["waybar_crypto"]

[tool.ruff]
line-length = 100

[tool.bandit]
exclude = ["test_*.py"]

[tool.pyright]
exclude = ["tests/"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["integration: tests that require a real API key and network access"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
